--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,3 +1,3 @@
-<p>
-  user works!
-</p>
+<p> user works! </p>
+<button routerLink="booking">Check booking</button>
+<router-outlet></router-outlet>
