--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div>Header</div>
-<button routerLink="/user/booking">User page</button>
+<button routerLink="/user">User page</button>
 <hr>
 <app-hotel></app-hotel>
 <hr>
