--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,3 +1,1 @@
-<p> user works! </p>
-<button routerLink="booking">Check booking</button>
-<router-outlet></router-outlet>
+<button routerLink="/booking">Check booking</button>
