--- a/src/app/hotel/hotel.component.html
+++ b/src/app/hotel/hotel.component.html
@@ -3,17 +3,24 @@
   <button>Search</button>
 </div>
 <hr>
-<div>All Hotels</div>
-<ul *ngFor="let hotel of hotels; let i = index">
-  <li>Hotel{{hotel.name}} | {{ hotel.address.city }}, {{hotel.address.country}}</li> 
-  <button (click)="bookHotel(hotel)"> Book Hotel{{hotel.name}} </button>
-</ul>
+<div class="all-bookings">
+  <div>
+    <div>All Hotels</div>
+    <ul *ngFor="let hotel of hotels">
+      <li>Hotel {{hotel.name}} | {{ hotel.address.city }}, {{hotel.address.country}}</li> 
+      <button (click)="bookHotel(hotel)"> Book Hotel{{hotel.name}} </button>
+    </ul>
+  </div>
+  
+  <div>
+    <div>All Bookings</div>
+    <ul *ngFor="let booking of bookings$ | async"> 
+      <li>{{booking.hotel.name}} | {{booking.hotel.rating}}</li>
+    </ul>
+  </div>
 
-<hr>
+</div>
 
-<div>All Bookings</div>
-<ul *ngFor="let booking of bookings$ | async"> 
-  <li>{{booking.hotel.name}} | {{booking.hotel.rating}}</li>
-</ul>
+<!-- <button (click)="createHotels()">Create Hotel</button> -->
 
 <button routerLink="/booking">Check booking</button>
