--- a/src/app/hotel/hotel.component.html
+++ b/src/app/hotel/hotel.component.html
@@ -24,4 +24,4 @@
 
 <!-- <button (click)="createHotels()">Create Hotel</button> -->
 
-<button routerLink="/booking">Check booking</button>
+<button mat-raised-button routerLink="/booking">Check booking</button>
