Update Angular material

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,26 @@
-<div>Header</div>
-<button routerLink="/user">User page</button>
-<hr>
-<app-hotel></app-hotel>
-<hr>
-<div>Footer</div>
+<mat-sidenav-container hasBackdrop="true">
+    <mat-sidenav #sidenav mode="push">
+        Menu item 1
+        Menu item 2
+    </mat-sidenav>
+
+    <mat-sidenav-content>
+        <mat-toolbar fxLayout="row" fxLayoutAlign="space-between center">
+            <div fxLayout="row" fxLayoutAlign="start center">
+                <button mat-button (click)="sidenav.toggle()">Toggle</button>
+                <div> letsgo123.xyz | </div>
+                <div> Explore | </div>
+                <div> Today's deal </div>
+            </div>
+            <div fxLayout="row" fxLayoutAlign="end center">
+                <div> Sign in | </div>
+                <div> Create account </div>
+            </div>
+        </mat-toolbar>
+        <button routerLink="/user">User page</button>
+        <hr>
+        <app-hotel></app-hotel>
+        <hr>
+        <div>Footer</div>
+    </mat-sidenav-content>
+</mat-sidenav-container>
