Add signin & singup pages

--- a/src/app/user/auth/signup/signup.component.html
+++ b/src/app/user/auth/signup/signup.component.html
@@ -1,17 +1,20 @@
 <div fxLayout="column" fxLayoutAlign="center center" class="signin">
-    <mat-card fxLayout="column" fxLayoutAlign="center center">
-        <h1>Letsgo123</h1>
-        <h2>Create your account</h2>
-      <mat-form-field>
-        <input matInput type="text" placeholder="Email">
-        <mat-icon matSuffix>email</mat-icon>
-      </mat-form-field>
-      <mat-form-field>
-          <input matInput type="text" placeholder="Password">
-          <mat-icon matSuffix>visibility</mat-icon>
-        </mat-form-field>
-      <button mat-raised-button routerLink="/signup">Sign up</button>
-      <button mat-button routerLink="/signin">Sign in instead</button>
-    </mat-card>
-  </div>
-  
+  <mat-card fxLayout="column" fxLayoutAlign="center center">
+    <h1>Letsgo123</h1>
+    <h2>Create your account</h2>
+    <mat-form-field>
+      <input matInput type="text" placeholder="Username">
+      <mat-icon matSuffix>person</mat-icon>
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput type="text" placeholder="Email">
+      <mat-icon matSuffix>email</mat-icon>
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput type="text" placeholder="Password">
+      <mat-icon matSuffix>visibility</mat-icon>
+    </mat-form-field>
+    <button mat-raised-button routerLink="/signup">Sign up</button>
+    <button mat-button routerLink="/signin">Sign in instead</button>
+  </mat-card>
+</div>
