Update Auth service

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,8 +13,8 @@
                 <div> Today's deal </div>
             </div>
             <div fxLayout="row" fxLayoutAlign="end center">
-                <div routerLink="/user"> Sign in | </div>
-                <div routerLink="/user"> Create account </div>
+                <div routerLink="/signin"> Sign in | </div>
+                <div routerLink="/signup"> Create account </div>
             </div>
         </mat-toolbar>
 
