--- a/src/app/hotel/hotel.component.html
+++ b/src/app/hotel/hotel.component.html
@@ -1,10 +1,10 @@
 <div fxLayout="column">
-<form fxFlexAlign="center">
+<div fxFlexAlign="center">
   <mat-form-field class="search-bar">
     <input type="text" matInput placeholder="Search...">
     <mat-icon matSuffix>search</mat-icon>
   </mat-form-field>
-</form>
+</div>
   <div fxLayout="row">
     <div fxFlexAlign="start" fxFlex="30">
       <section fxLayout="column">
