--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,2 @@
-<button routerLink="/booking">Check booking</button>
+<button mat-button routerLink="/booking">Check booking</button>
+<button mat-button (click)="onSignout()">Sign out</button>
