--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -1,8 +1,8 @@
-<button routerLink="/">Home</button>
+<button mat-button routerLink="/">Home</button>
 
 <div>All Bookings</div>
 
 <ul *ngFor="let booking of bookings$ | async ; let i = index"> 
   <li>{{booking.hotel.name}} | {{booking.hotel.rating}} </li>
-  <button (click)="removeHotel(i)">Remove this booking</button>
+  <button mat-button (click)="removeHotel(i)">Remove this booking</button>
 </ul>
