Update filter section

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,8 +28,21 @@
 
         <router-outlet></router-outlet>
 
-        <mat-toolbar fxLayout="row" fxLayoutAlign="end center">
-            <div>Test site</div>
-        </mat-toolbar>
+        <div fxLayout="row" fxLayoutAlign="space-around " class="footer">
+            <ul>
+                <li>Contact us</li>
+                <li>FAQs</li>
+                <li>Terms of use</li>
+            </ul>
+            <ul>
+                <li>About us</li>
+                <li>Blog</li>
+                <li>Terms of use</li>
+            </ul>
+            <ul>
+                <li>Partner with us</li>
+                <li>Career</li>
+            </ul>
+        </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
