--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -29,15 +29,15 @@
     <div fxLayout="column" class="popular-destinations">
         <p fxFlexAlign="center">Popular destinations</p>
         <div fxLayout="row" fxLayoutAlign="space-around center">
-            <mat-card routerLink="/hotel">
+            <mat-card routerLink="/tour">
                 Ho Chi Minh
             </mat-card>
 
-            <mat-card routerLink="/hotel">
+            <mat-card routerLink="/tour">
                 Da Nang
             </mat-card>
 
-            <mat-card routerLink="/hotel">
+            <mat-card routerLink="/tour">
                 Can Tho
             </mat-card>
         </div>
