--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -17,7 +17,7 @@
         </button>
     </div>
 
-    <ul *ngFor="let destination of destinations">
+    <ul *ngFor="let destination of popularPlaces">
         <li> {{destination}}</li>
     </ul>
 
