--- a/src/app/main-page/tour-by-address/tour-by-address.component.html
+++ b/src/app/main-page/tour-by-address/tour-by-address.component.html
@@ -23,7 +23,7 @@
   <mat-card-title>{{tour.name}}</mat-card-title>
   <mat-card-subtitle>{{tour.rating}} | {{tour.tourType}} | {{tour.price}}$ </mat-card-subtitle>
   <mat-card-actions>
-    <button mat-button>Tour info</button>
+    <button mat-button [routerLink]="['/tour-details', tour._id]">Tour info</button>
     <button mat-button>Book this tour</button>
   </mat-card-actions>
 </mat-card>
