--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -17,16 +17,18 @@
         </button>
     </div>
 
-    <div *ngFor="let destination of popularPlaces">
-        <mat-card>
-            {{destination}}
-            <mat-card-actions>
-                <button 
-                mat-button [routerLink]="['/tour-by-address', destination]">
-                Find out more
-                </button>
-            </mat-card-actions>
-        </mat-card>
-    </div>
+    <mat-grid-list cols="4" rowHeight="3:1">
+        <mat-grid-tile *ngFor="let destination of popularPlaces" >
+            <mat-card>
+                {{destination}}
+                <mat-card-actions>
+                    <button 
+                    mat-button [routerLink]="['/tour-by-address', destination]">
+                    Find out more
+                    </button>
+                </mat-card-actions>
+            </mat-card>
+        </mat-grid-tile>
+    </mat-grid-list>
 
 </div>
