Update main-page layout

--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -1,11 +1,7 @@
-.main-page{
-    height: 81vh;
+.margin-1 {
+    margin: 1%;
 }
 
-.popular-destinations{
+.margin-2 {
     margin: 2%;
-}
-
-.popular-destinations, p {
-    margin:3%;
 }
