--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,4 +1,4 @@
-<div class="main-page">
+<div class="main-page" fxLayout="column">
 
     <div fxLayout="row" fxLayoutAlign="center center">
         <mat-form-field floatLabel="never">
@@ -17,7 +17,7 @@
         </button>
     </div>
 
-    <mat-grid-list cols="4" rowHeight="3:1">
+    <!-- <mat-grid-list cols="4" rowHeight="3:1">
         <mat-grid-tile *ngFor="let destination of popularPlaces" >
             <mat-card>
                 {{destination}}
@@ -29,6 +29,18 @@
                 </mat-card-actions>
             </mat-card>
         </mat-grid-tile>
-    </mat-grid-list>
-
+    </mat-grid-list> -->
+    <div fxLayout="row wrap" fxLayoutAlign="space-evenly center" class="margin-2">
+        <mat-card fxFlex.lt-sm="100%" fxFlex.lt-md="45%" fxFlex="25%" *ngFor="let destination of popularPlaces"
+            class="margin-1">
+            <mat-card-title>
+                {{destination}}
+            </mat-card-title>
+            <mat-card-actions>
+                <button mat-button [routerLink]="['/tour-by-address', destination]">
+                    Find out more
+                </button>
+            </mat-card-actions>
+        </mat-card>
+    </div>
 </div>
